--- a/view/CMakeLists.txt
+++ b/view/CMakeLists.txt
@@ -23,6 +23,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(view
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        resource.qrc
+        resource.qrc
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET view APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
