--- a/view/CMakeLists.txt
+++ b/view/CMakeLists.txt
@@ -17,6 +17,10 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        Data.cpp
+        Data.h
+        Vector.cpp
+        Vector.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
